--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -63,6 +63,26 @@
                 android:layout_marginTop="20dp"
                 android:textSize="18sp"/>
 
+        <TextView
+                android:id="@+id/profileHouseNumHint"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:text="@string/profile_house_num"
+                app:layout_constraintStart_toStartOf="@id/profileBlock"
+                app:layout_constraintTop_toBottomOf="@id/profileEmail"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="20dp"
+                android:textSize="18sp"/>
+
+        <TextView
+                android:id="@+id/profileHouseNum"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                app:layout_constraintStart_toEndOf="@id/profileHouseNumHint"
+                app:layout_constraintTop_toBottomOf="@id/profileEmail"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="20dp"
+                android:textSize="18sp"/>
 
 
         <LinearLayout
@@ -70,7 +90,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:padding="10dp"
-                app:layout_constraintTop_toBottomOf="@id/profileEmail">
+                app:layout_constraintTop_toBottomOf="@id/profileHouseNum">
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/updateUsernameButton"
@@ -186,6 +206,7 @@
             android:layout_margin="16dp"
             android:layout_gravity="bottom|end"
             app:maxImageSize="32dp"
+            app:srcCompat="@drawable/ic_add_black_24dp"
             style="@style/loginButton"/>
 
    <!-- <com.google.android.material.button.MaterialButton
